--- a/Ara2.AraMenu/Ara2.AraMenu.csproj
+++ b/Ara2.AraMenu/Ara2.AraMenu.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Ara2.AraMenu</RootNamespace>
     <AssemblyName>Ara2.AraMenu</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,8 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Ara2, Version=1.2.5946.20635, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ara2.1.2.5946.20635\lib\net40\Ara2.dll</HintPath>
+    <Reference Include="Ara2, Version=1.2.6.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ara2.1.2.6.2\lib\net40\Ara2.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -50,17 +51,39 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Ara2\Components\AraMenu\CREDITS.md" />
-    <None Include="Ara2\Components\AraMenu\LICENSE.md" />
+    <Content Include="Ara2\Components\AraMenu\CREDITS.md" />
+    <Content Include="Ara2\Components\AraMenu\LICENSE.md" />
+    <None Include="Nuget\Ara2.AraMenu.nuspec">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Ara2\Components\AraMenu\AraMenu.js" />
+    <Content Include="Ara2\Components\AraMenu\files\fg_menu.css" />
+    <Content Include="Ara2\Components\AraMenu\files\fg_menu.js" />
+    <Content Include="Ara2\Components\AraMenu\files\fg_menu_add.css" />
+    <Content Include="Nuget\NuGet.exe" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Ara2\Components\AraMenu\files\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="PostBuildMacros">
+    <GetAssemblyIdentity AssemblyFiles="$(TargetPath)">
+      <Output TaskParameter="Assemblies" ItemName="Targets" />
+    </GetAssemblyIdentity>
+    <ItemGroup>
+      <VersionNumber Include="@(Targets->'%(Version)')" />
+    </ItemGroup>
+  </Target>
+  <PropertyGroup>
+    <PostBuildEventDependsOn>
+    $(PostBuildEventDependsOn);
+    PostBuildMacros;
+  </PostBuildEventDependsOn>
+    <PostBuildEvent>cd $(ProjectDir)Nuget
+del *.nupkg
+nuget.exe pack $(SolutionName).nuspec -version @(VersionNumber)</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
